--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
     <title>SATISFICE LOGIN</title>
 </head>
 <body>
@@ -34,6 +34,6 @@
             <button type="button" id="submit" class="boton">Registrarse</button>
         </div>
         </form>
-        <script src="./form.js"></script>
+        <script src="./login.js"></script>
 </body>
 </html>
